--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@ body {
   height: 100vh;
   width: 100vw;
 }
+p {
+  color: #2B283A;
+}
 #root {
   background-color: #fff;
   max-width: 600px;
@@ -14,6 +17,7 @@ body {
   height: 100vh;
   border-radius: 8px;
   font-family: Inter;
+  overflow: scroll;
 }
 .header {
   display: flex;
@@ -26,4 +30,65 @@ body {
   height: 30px;
   margin-top: 14px;
   margin-right: 10px;
+}
+.journey-card {
+  width: 100%;
+  float: left;
+  padding: 20px;
+  border-bottom: 1px solid #ccc;
+  display: flex;
+}
+.card-left {
+  width: 30%;
+  float: left;
+}
+img.location-img {
+  max-width: 100%;
+  min-height: 200px;
+  border-radius: 5px;
+  width: 126px;
+  height: 168px;
+}
+.card-right {
+  width: 65%;
+  margin-left: 10px;
+}
+.travel-info {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.location span.pointer {
+  background-image: url("../public/images/pin.png");
+  height: 18px;
+  width: 18px;
+  background-size: contain;
+  float: left;
+}
+.location span.country {
+  color: #2B283A;
+  font-weight: 400;
+  margin-right: 10px;
+  margin-left: 5px;
+  letter-spacing: 1px;
+  font-size: 12px;
+}
+a.maps-link {
+  color: #918E9B;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+}
+p.title {
+  color: #2B283A;
+  font-weight: 700;
+  font-size: 25px;
+}
+p.date {
+  color: #2B283A;
+  font-weight: 700;
+  font-size: 10px;
+}
+p.description {
+  font-weight: 400;
+  font-size: 13px;
 }
